# nexagen

./: .gitignore  README.md  pyproject.toml
docs/: agent.md  api-reference.md  architecture.md  cli-tui.md  examples.md  getting-started.md  index.md  mcp.md  project-review.md  providers.md  tools.md
docs/plans/: 2026-03-07-agent-orchestration-design.md  2026-03-07-agent-orchestration-impl.md  2026-03-07-nexagen-design.md  2026-03-07-nexagen-implementation.md
examples/: production_test.py  real_world_scenarios.py
src/nexagen/: __init__.py  agent.py  agent_logging.py  constants.py  context.py  conversation.py  execution.py  http_retry.py  memory.py  models.py  permissions.py  planning.py  reflection.py
src/nexagen/cli/: app.py
src/nexagen/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_compat.py  openai_native.py  registry.py
src/nexagen/supervisor/: __init__.py  supervisor.py
src/nexagen/tools/: base.py  mcp.py  registry.py
src/nexagen/tui/: __init__.py  app.py
tests/: test_agent.py  test_cli.py  test_context.py  test_conversation.py  test_execution.py  test_http_retry.py  test_integration.py  test_logging.py  test_memory.py  test_models.py  test_permissions.py  test_planning.py  test_public_api.py  test_reflection.py  test_resilience.py  test_scenarios.py  test_security.py  test_supervisor.py  test_tui.py
tests/test_providers/: test_anthropic.py  test_google.py  test_openai_compat.py  test_openai_native.py  test_registry.py
tests/test_tools/: test_base.py  test_builtin.py  test_mcp.py  test_registry.py
(+8 files in other folders)
