[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexagen"
version = "0.1.0"
description = "Universal LLM Agent SDK — connect to any provider, run agents locally"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.50",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
google = ["google-genai>=1.0"]
mcp = ["mcp>=1.0"]
all = ["nexagen[anthropic,openai,google,mcp]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
nexagen = "nexagen.cli.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
